--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  infinite_scroll_pagination: ^4.0.0
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.4.0
   riverpod: ^2.4.0
